--- a/Final Script/ETL Challenge.ipynb
+++ b/Final Script/ETL Challenge.ipynb
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#spotify_data_df.head()"
+    "#  spotify_data_df.head()"
    ]
   },
   {
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Use pandas to load csv converted DataFrame into database\n",
+    "# Pandas to load csv converted DataFrame into database\n",
     "new_spotify_data_df.to_sql(name='top10', con=engine,if_exists='append',index=False)"
    ]
   },
@@ -457,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Creating dataframes from the sqlite database tables ##\n",
+    "#Creating dataframes from the sqlite database tables#\n",
     "\n",
     "#Content Table#\n",
     "content_df = pd.read_sql(\"SELECT * FROM content\", conn)\n",
@@ -513,13 +513,6 @@
    "outputs": [],
    "source": [
     "#Use Pandas to load datframes into POSTGRESQL database#\n",
-    "\n",
-    "# #Content Table#\n",
-    "# content_df.to_sql(name='contents', con=engine2, if_exists='append', index=False)\n",
-    "# #Genres Table#\n",
-    "# genres_df.to_sql(name='genres', con=engine2, if_exists='append', index=False)\n",
-    "# #labels table#\n",
-    "# labels_df.to_sql(name='labels', con=engine2, if_exists='append', index=False)\n",
     "\n",
     "# #Review Table#\n",
     "pitchfork_data.to_sql(name='reviews', con=engine2, if_exists='append', index=False)\n",
